--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ install:
     - python setup.py install
 script:
     - flake8 bracketeer/__init__.py --max-line-length 120
-    - py.test bracketeer/tests/tests.py --cov=bracketeer
+    - py.test tests/tests.py --cov=bracketeer
 #after_success:
 #    - coveralls
